<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resumen">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TituloResumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/envioUsuario"
        app:layout_constraintEnd_toStartOf="@+id/tvUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        app:layout_constraintEnd_toStartOf="@+id/tvUsuario"
        app:layout_constraintStart_toStartOf="@+id/tvUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/tvTotalPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toStartOf="@+id/tvNombre"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:text="@string/respuestas"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:text="@string/pregunta1"
        app:layout_constraintBottom_toTopOf="@+id/tvRespuesta1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRespuesta1"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginBottom="192dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="192dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvRespuesta3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/pregunta2"
        app:layout_constraintStart_toStartOf="@+id/tvRespuesta2"
        app:layout_constraintTop_toBottomOf="@+id/tvRespuesta1" />

    <TextView
        android:id="@+id/tvRespuesta2"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginBottom="78dp"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="75dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRespuesta3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRespuesta1" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/pregunta3"
        app:layout_constraintBottom_toTopOf="@+id/tvRespuesta3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRespuesta2" />

    <TextView
        android:id="@+id/tvRespuesta3"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="193dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>